--- a/app/src/main/res/layout/activity_venda.xml
+++ b/app/src/main/res/layout/activity_venda.xml
@@ -1,104 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp">
-
-
-    <Spinner
-        android:id="@+id/spListaClientes"
+    android:layout_height="match_parent">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-
-    <Spinner
-        android:id="@+id/spListaProdutos"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"/>
-
-    <EditText
-        android:id="@+id/edQuantidade"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Quantidade"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        android:inputType="number"/>
-
-    <Button
-        android:id="@+id/btAdicionarItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Adicionar Item"
-        android:textSize="20sp"/>
-
-    <ListView
-        android:id="@+id/lvItens"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp" />
-
-    <RadioGroup
-        android:id="@+id/rgCondicaoPagamento"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp">
-
-        <RadioButton
-            android:id="@+id/rbAVista"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="À Vista"/>
+            android:text="Cliente"
+            android:layout_margin="10dp"/>
 
-        <RadioButton
-            android:id="@+id/rbAPrazo"
+        <AutoCompleteTextView
+            android:id="@+id/atClientes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            android:completionThreshold="1"/>
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="A Prazo"/>
-    </RadioGroup>
+            android:text="Produto:"
+            android:layout_margin="10dp"/>
 
-    <EditText
-        android:id="@+id/edQuantidadeParcelas"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Quantidade de Parcelas"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        android:inputType="number"
-        android:visibility="gone"/>
+        <AutoCompleteTextView
+            android:id="@+id/atProduto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            android:completionThreshold="1"/>
 
-    <ListView
-        android:id="@+id/lvParcelas"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        android:visibility="gone"/>
+        <EditText
+            android:id="@+id/edQuantidade"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Quantidade"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            android:inputType="number"/>
+
+        <EditText
+            android:id="@+id/edPrecoVenda"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Preço unitário"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            android:inputType="number"/>
+
+        <Button
+            android:id="@+id/btAdicionarItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Adicionar Item"
+            android:textSize="20sp"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Itens do pedido:"
+            android:layout_margin="10dp"/>
+
+        <TextView
+            android:id="@+id/tvItens"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp" />
+
+        <RadioGroup
+            android:id="@+id/rgCondicaoPagamento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp">
+
+            <RadioButton
+                android:id="@+id/rbAVista"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="À Vista"/>
+
+            <RadioButton
+                android:id="@+id/rbAPrazo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="A Prazo"/>
+        </RadioGroup>
+
+        <EditText
+            android:id="@+id/edQuantidadeParcelas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Quantidade de Parcelas"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            android:inputType="number"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tvValorParcela"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Valor Parcela"
+            android:layout_marginTop="10dp"
+            android:textSize="15sp"
+            android:inputType="numberDecimal"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tvValorTotal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Valor Total: R$ 0.00"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
 
-    <TextView
-        android:id="@+id/tvValorTotal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Valor Total: R$ 0.00"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+        <Button
+            android:id="@+id/btConcluirPedido"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Concluir Pedido"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"/>
 
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btConcluirPedido"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Concluir Pedido"
-        android:textSize="20sp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"/>
-</LinearLayout>
+</ScrollView>
